<resources>
    <string name="app_name">Measure It</string>
    <string name="button_change_color">Change Color</string>
    <string name="button_hide_pointer">Hide Pointer</string>
    <string name="button_imperial">Imperial Units</string>
    <string name="button_metric">Metric Units</string>
    <string name="button_show_pointer">Show Pointer</string>
    <string name="cancel">Close</string>
    <string name="color_picker_title">Pick a Color</string>
    <string name="disabled_message">Shortcut Disabled</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="random_color">Random Color</string>
    <string name="ruler_color_pref_key">abcmeasurecorp.com.measureit.rulerColor</string>
    <string name="ruler_is_metric_pref_key">abcmeasurecorp.com.measureit.rulerIsMetric</string>
    <string name="ruler_show_pointer_pref_key">abcmeasurecorp.com.measureit.rulerShowPointer</string>
    <string name="subtitle">By Xishan Axhari</string>

</resources>
